tests/enums_off/enums_off.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Flow Enums are not enabled. You may opt-in to using enums by putting `enums=true` into the `[options]` section of your
`.flowconfig`. [illegal-enum]

      v-------------------------------
   3| enum E { // Error: enums are off
   4|   A,
   5|   B,
   6| }
      ^


Error ----------------------------------------------------------------------------------------------------- test.js:8:16

Cannot resolve name `E`. [cannot-resolve-name]

   8| declare var x: E; // Error: can't resolve name `E`
                     ^



Found 2 errors
